# learn-cmake

./: README.md
1_HELLOWORLD/: CMakeLists.txt  main.cc
2_BasicProject/: CMakeLists.txt  my_lib.cc
3_IntermediateProject/app/: main.cc
3_IntermediateProject_2/: CMakeLists.txt
3_IntermediateProject_3/: CMakeLists.txt
3_IntermediateProject_3/src/src/my_lib/: CMakeLists.txt
4_VariablesOptions/: CMakeLists.txt
4_VariablesOptions/src/my_lib/: my_lib.cc
